<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.RegisterAndPhoneLoginActivity">


    <ImageView
        android:id="@+id/img_changwanloge"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_148"
        android:layout_marginLeft="@dimen/dp_148"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginEnd="@dimen/dp_148"
        android:layout_marginRight="@dimen/dp_148"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_changwan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/app_name"
        android:textColor="@color/app_theme_color"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="@+id/img_changwanloge"
        app:layout_constraintStart_toStartOf="@+id/img_changwanloge"
        app:layout_constraintTop_toBottomOf="@+id/img_changwanloge" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_256"
        android:background="@drawable/newuserlogin"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vi_tow"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/vi_noe"
        android:layout_width="@dimen/dp_315"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_68"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:background="@drawable/inputbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_changwan" />

    <View
        android:id="@+id/vi_tow"
        android:layout_width="@dimen/dp_315"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_21"
        android:background="@drawable/inputbox"
        app:layout_constraintEnd_toEndOf="@+id/vi_noe"
        app:layout_constraintStart_toStartOf="@+id/vi_noe"
        app:layout_constraintTop_toBottomOf="@+id/vi_noe" />

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:background="@drawable/edinputbox"
        android:ems="11"
        android:hint="输入手机号"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="@+id/vi_noe"
        app:layout_constraintStart_toStartOf="@+id/vi_noe"
        app:layout_constraintTop_toTopOf="@+id/vi_noe" />

    <EditText
        android:id="@+id/enter_password_ed"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:background="@drawable/edinputbox"
        android:ems="6"
        android:hint="输入密码"
        android:inputType="phone"
        android:maxLength="6"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="@+id/vi_tow"
        app:layout_constraintStart_toStartOf="@+id/vi_tow"
        app:layout_constraintTop_toTopOf="@+id/vi_tow" />

    <TextView
        android:id="@+id/tv_count_down"
        android:layout_width="@dimen/dp_26"
        android:layout_height="@dimen/dp_18"
        android:layout_marginStart="@dimen/dp_259"
        android:layout_marginLeft="@dimen/dp_269"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="center"
        android:text="56s"
        android:textColor="@color/C00C6BA"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/vi_tow"
        app:layout_constraintEnd_toEndOf="@+id/vi_tow"
        app:layout_constraintStart_toStartOf="@+id/enter_password_ed"
        app:layout_constraintTop_toTopOf="@+id/vi_tow" />

    <TextView
        android:id="@+id/verification_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/Authentication_free_login"
        app:layout_constraintEnd_toStartOf="@+id/retrieve_password_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt_login"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/dp_216"
        android:layout_height="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_80"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_80"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/agreement"
        android:textColor="#ff999999"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="@dimen/dp_52"
        android:layout_height="@dimen/dp_15"
        android:gravity="right"
        android:text="用户协议"
        android:textColor="@color/app_theme_color"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/retrieve_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="找回密码"
        app:layout_constraintBottom_toBottomOf="@+id/verification_login_tv"
        app:layout_constraintEnd_toEndOf="@+id/bt_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/verification_login_tv"
        app:layout_constraintTop_toTopOf="@+id/verification_login_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>